# excamdat

./: .gitignore  CMakeLists.txt  README  exexecdat.cc  exmaldat.cc  key_info.csv  lib.cc  lib.h  main.cc  setbgmloop.cc  webp2png.py
PeLib/: CMakeLists.txt
bgm_loop/: ikb.csv  sgb.csv  slr.csv  slt.csv  slv.bkup.csv  slv.csv  ssg.csv
mlib/: CMakeLists.txt  exec.cc  exec.h  extractor.cc  extractor.h  mlib.cc  mlib.h  reader.cc  reader.h  vmparser.cc  vmparser.h
test/: CMakeLists.txt  reader_test.cc  slt_test.cc
tool/: CMakeLists.txt  create_drama_voice.cc  exec7parser.cc  routesim.cc
